Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch WithoutTournament
Your branch is up to date with 'origin/WithoutTournament'.

Changes to be committed:
	new file:   migrations/Version20231213143955.php
	modified:   public/css/home.css
	new file:   public/img/homeBackground.jpeg
	new file:   public/js/home.js
	modified:   public/js/tournamentForm.js
	modified:   src/Controller/ApiController.php
	modified:   src/Controller/GameController.php
	modified:   src/Controller/HomeController.php
	new file:   src/Controller/TournamentController.php
	modified:   src/Entity/Game.php
	new file:   src/Entity/Tournament.php
	modified:   src/Form/RosterType.php
	modified:   src/Form/TournamentType.php
	new file:   src/Repository/TournamentRepository.php
	modified:   templates/base.html.twig
	modified:   templates/home/index.html.twig
	new file:   templates/tournament/index.html.twig
	modified:   templates/tournament/tournamentForm.html.twig
	modified:   templates/tournament/tournamentsList.html.twig

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -2,9 +2,74 @@
 .homeContent{
     display: flex;
     justify-content: space-between;
-    margin-top: 20px;
+    margin: 20px 0;
 }
 
 .homeContent h2{
     text-align: center;
+}
+
+/**********Background pic ******************************/
+.backgroundPic {
+    /* 
+    Super propriété background permet de combiner background-image, repeat et position
+    */
+    background: url(../img/homeBackground.jpeg) no-repeat center;
+    height: 250px;
+    background-attachment: fixed;
+    /* 
+    Permet de définir si l'image de fond défile par rapport au document ou si elle reste fixée au fond
+    */
+    background-size:cover;
+}
+
+
+/************Accordeon **********************************/
+#tournament-list {
+    width: 700px;
+    margin: 0 auto;
+}
+
+.tournamentNameHome {
+    background: #DBF0FA;
+    padding: 11px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin-bottom: 0;
+    display: block;
+    border-bottom: 1px solid #e7e7e7;
+    position: relative;
+    text-decoration: none;
+    color: #2a2a2e;
+    border-radius: 10px;
+    box-shadow: 2px #2a2a2e;
+}
+
+.tournamentNameHome i {
+    position: absolute;
+    right: 3%;
+    transition: 0.3s;
+}
+
+.tournamentDetailsHome {
+    padding: 15px;
+    display: none;
+    background: #DBF0FA;
+    margin-top: 0;
+    color: #455;
+    border-radius: 10px;
+}
+
+.active {
+    color: blue;
+    font-weight: bold;
+}
+
+.active i {
+    transform: rotate(90deg);
+}
+
+.tournamentListHome {
+    /* display: none; */
+    list-style: none;
 }
