Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch WithoutTournament
Your branch is up to date with 'origin/WithoutTournament'.

Changes to be committed:
	modified:   public/css/style.css
	modified:   src/Controller/ApiController.php
	modified:   src/Controller/HomeController.php
	modified:   src/Controller/TournamentController.php
	modified:   src/Entity/Tournament.php
	modified:   src/Entity/User.php
	modified:   templates/tournament/index.html.twig
	new file:   templates/tournament/tournamentDetails.html.twig
	modified:   templates/tournament/tournamentForm.html.twig
	deleted:    templates/tournament/tournamentsList.html.twig

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,6 +22,7 @@ body{
 
 .logoSite img{
     width: 95.5px;
+    border-radius: 10px;
 }
 
 /****************************************************** HEADER *****************************************************/
