--- a/templates/tournament/index.html.twig
+++ b/templates/tournament/index.html.twig
@@ -9,7 +9,7 @@
         {{ dump(tournaments) }}
             {% for tournament in tournaments %}
                 <li>
-                    <a href="#">{{ tournament.name }}</a>
+                    <a href="{{ path('details_tournament', {'name': tournament.name, 'url': tournament.url}) }}">{{ tournament.name }}</a>
                     {# {{ tournament.start_at|date_fr('l j F Y') }} #}
                 </li>
             {% endfor %}
