--- a/templates/tournament/tournamentForm.html.twig
+++ b/templates/tournament/tournamentForm.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Ajoutez une nouvelle équipe !{% endblock %}
+{% block title %}Ajoutez un nouveau tournoi !{% endblock %}
 
 {% block body %}
         
     {# if the var edit is set it means we are in a modify form not in an add one so we adjust the title #}
-    <h1>Ajouter une nouvelle équipe !</h1>
+    <h1>Ajouter un nouveau tournoi !</h1>
     
         
     {# First form is the FUNCTION the second one is the var creates in the controller #}
