--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -197,6 +197,9 @@
             {# link to home js #}
             <script src="{{ asset('js/home.js') }}"></script>
 
+            {# link to teamSearchBar js #}
+            <script src="{{ asset('js/teamSearchBar.js') }}"></script>
+
             {# link to gameSearchBar js #}
             <script src="{{ asset('js/gameSearchBar.js') }}"></script>
 
