--- a/templates/tournament/index.html.twig
+++ b/templates/tournament/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Esport Xpertise - liste des tournois d'esport{% endblock %}
 
 {% block body %}
-    <h1>Liste d'équipes</h1>
+    <h1>Liste des tournois</h1>
 
         <ul id="tournamentsList">
         {{ dump(tournaments) }}
