--- a/templates/tournament/tournamentDetails.html.twig
+++ b/templates/tournament/tournamentDetails.html.twig
@@ -7,4 +7,7 @@
     <h1>{{ tournament }}</h1>
 
 
+    {{ form_start(form) }}
+        {% include "searchBarTeam.html.twig" %}
+    {{ form_end(form) }}
 {% endblock %}
