--- a/public/css/style.css
+++ b/public/css/style.css
@@ -156,6 +156,7 @@ ol{
     background-color: #DBF0FA;
     width: auto;
     height: auto;
+    max-height: 300px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
