Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch WithoutTournament
Your branch is up to date with 'origin/WithoutTournament'.

Changes to be committed:
	modified:   public/css/home.css
	modified:   src/Controller/ApiController.php
	modified:   src/Controller/TeamController.php
	modified:   src/Controller/TournamentController.php
	modified:   src/Form/AddPlayersToTournamentType.php
	modified:   templates/base.html.twig
	modified:   templates/game/gameDetails.html.twig
	modified:   templates/home/index.html.twig
	modified:   templates/tournament/tournamentDetails.html.twig

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -14,6 +14,10 @@
     max-width: 60%;
 }
 
+.esportDescription{
+    text-align: justify;
+}
+
 /**********Background pic ******************************/
 .backgroundPic {
     /* 
@@ -31,6 +35,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.backgroundPic p {
+    width: 50%;
+    text-align: justify;
 }
 
 
