--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -17,7 +17,7 @@
 
         {# This is the description of the home page with a link to register if it'a a vistitor #}
         <p>
-            Bienvenue sur Esport Xpertise, un site pour les amateurs d’esport et pour ceux qui en font la découverte. Ici vous pourrez trouver des renseignements sur ce qu’est l’esport mais aussi sur chaque équipe, chaque jeu ou encore chaque tournoi existant.
+            Un site pour les amateurs d’esport et pour ceux qui en font la découverte. Ici vous pourrez trouver des renseignements sur ce qu’est l’esport mais aussi sur chaque équipe, chaque jeu ou encore chaque tournoi existant.
             
             {% if not app.user %}
                 
@@ -42,7 +42,7 @@
 
             <h2>Qu'est-ce que l'esport ?</h2>
 
-            <p>
+            <p class="esportDescription">
                 L'esport désigne la compétiton entre des professionels du jeux vidéo. Ces compétitions peuvent être aussi bien en LAN (c'est-à-dire que les joueurs sont tous au même endroit et partagent la même connexion) qu'en ligne.L'esport a gagné énormément en popularité au fil des années, il attire un public mondial qui suit les compétitions à travers des plateformes de diffusion en direct sur Internet, comme Twitch. Les tournois majeurs peuvent offrir des prix conséquents, et les équipes esportives professionnelles sont devenues une réalité avec des sponsors, des contrats de joueurs et des ligues organisées. L'esport est ainsi devenu un phénomène culturel et une industrie à part entière, rassemblant des communautés de joueurs passionnées à travers le monde. Ce phénomène prend encore plus d'ampleur avec l'arrivée massive d'équipes lancées par des influenceurs qui ouvrent l'esport a leur communauté. On a par exemple en France l'exemple de la Karmine Corp lancée par un streamer Twitch, Kameto, et qui aujourd'hui est l'une des équipes les plus solides au monde aussi financièrement qu'au niveau du palmares.
             </p>
 
