Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch WithoutTournament
Your branch is up to date with 'origin/WithoutTournament'.

Changes to be committed:
	modified:   public/css/home.css
	new file:   public/img/badtest.jpg
	new file:   public/img/homeBackground.jpg
	new file:   public/img/homeBackgroundfailed.jpg
	new file:   public/img/lopeencore.jpg
	renamed:    public/img/homeBackground.jpeg -> public/img/oldhomeBackground.jpeg
	new file:   public/img/testloupe.jpg
	modified:   templates/base.html.twig
	modified:   templates/home/index.html.twig
	modified:   templates/topTeamsList.html.twig
	modified:   templates/topUsersList.html.twig

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -130,7 +130,7 @@
                                 <li><a href="{{ path('new_editor') }}" class="dropdown-item">Editeur</a></li>
 
                                 {# Link to create a new social media #}
-                                <li><a href="{{ path('app_home') }}" class="dropdown-item">Réseau Social</a></li>
+                                {# <li><a href="{{ path('app_home') }}" class="dropdown-item">Réseau Social</a></li> #}
                             </ul>
                         </div>
                     {% endif %}
