--- a/templates/topUsersList.html.twig
+++ b/templates/topUsersList.html.twig
@@ -1,8 +1,8 @@
 <ol>
     {% for user in users %}
         <li>
-            {{ user }} ||
-            {{ user.siteCoins }} <i class="fa-solid fa-coins" style="color: #f2d40d;"></i>
+            {{ user.siteCoins }} <i class="fa-solid fa-coins" style="color: #f2d40d;"></i> ||
+            {{ user }}
         </li>
     {% endfor %}
 </ol>
