--- a/public/css/home.css
+++ b/public/css/home.css
@@ -23,7 +23,7 @@
     /* 
     Super propriété background permet de combiner background-image, repeat et position
     */
-    background: url(../img/homeBackground.jpeg) no-repeat center;
+    background: url(../img/homeBackground.jpg) no-repeat center;
     height: 250px;
     background-attachment: fixed;
     /* 
@@ -35,10 +35,21 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    
 }
 
-.backgroundPic p {
+.backgroundPicText {
     width: 50%;
+    background-color: rgba(0,0,0,0.8);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.backgroundPicText p {
+    width: 90%;
     text-align: justify;
 }
 
