Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch WithoutTournament
Your branch is up to date with 'origin/WithoutTournament'.

Changes to be committed:
	new file:   migrations/Version20231218084529.php
	new file:   migrations/Version20231219123654.php
	modified:   public/css/style.css
	modified:   public/css/tournament.css
	modified:   src/Controller/ApiController.php
	modified:   src/Controller/HomeController.php
	modified:   src/Controller/TournamentController.php
	modified:   src/Entity/Player.php
	modified:   src/Entity/Team.php
	modified:   src/Entity/Tournament.php
	modified:   src/Form/EncounterType.php
	modified:   src/Form/PlayerType.php
	modified:   templates/home/index.html.twig
	new file:   templates/match/addScore.html.twig
	modified:   templates/tournament/index.html.twig
	modified:   templates/tournament/tournamentDetails.html.twig
	modified:   templates/tournament/tournamentForm.html.twig

--- a/public/css/tournament.css
+++ b/public/css/tournament.css
@@ -1,3 +1,4 @@
+/********************************************** Tournament Form *******************************************************/
 .doubleElimination,
 .swiss,
 .roundRobin,
@@ -11,4 +12,37 @@
 
     display: block;
     
+}
+
+.tournamentMatches{
+    /* border: 1px solid #999;
+    border-radius: 10px;
+    border-collapse: unset; */
+    width: 900px;
+}
+
+.tournamentTableColumnTitle th{
+    text-align: center;
+}
+
+.tableTitle{
+    width: 100%;
+    background-color: #DBF0FA;
+    border-radius: 10px;
+    padding: 10px 0;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.tournamentMatches tbody tr{
+    border-bottom: 1px dotted #999;
+    border-radius: 10px;
+}
+
+.tournamentMatches tbody td
+{
+    padding: 10px 0;
+    text-align: center;
+    width: 20%;
 }
