--- a/templates/tournament/tournamentForm.html.twig
+++ b/templates/tournament/tournamentForm.html.twig
@@ -13,6 +13,9 @@
     
         <label> Sur quel jeu se joue le tournoi ?</label>
         {% include "searchbarGame.html.twig" %}
+
+        <label for="numberPlayer">Combien de joueurs par équipe ?</label>
+        <input type="number" name="numberPlayer" class="form-control">
     {{ form_end(form) }}
    
 {% endblock %}
